--- a/config.yaml
+++ b/config.yaml
@@ -2,9 +2,9 @@ version: 1
 user: "davidcollom"
 lists:
   - slug: "tools" # taken from /stars/<user>/lists/<slug>
-    title: "Awesome Kubernetes FinOps Tools"
-    tagline: "Tools & samples for cost-efficient/FinOps K8s."
-    min_stars: 10
-    stale_months: 90
+    title: "Awesome Tools"
+    tagline: "A currated list Day to Day tools I find super awesome and helpful"
+    min_stars: 0
+    stale_months: 36
     badges:
       - "https://img.shields.io/badge/awesome-yes-brightgreen"
